--- a/D3Homework/basic mode/assets/css/style.css
+++ b/D3Homework/basic mode/assets/css/style.css
@@ -36,7 +36,7 @@ body {
   padding: 2px;
   padding-top: 8px;
   font: 12px sans-serif;
-  color: lightpink;
+  color: rgb(182, 183, 255);
   text-align: center;
   background: black;
   border: 0;
