--- a/D3Homework/boss mode/assets/css/style.css
+++ b/D3Homework/boss mode/assets/css/style.css
@@ -52,7 +52,7 @@ body {
   padding: 2px;
   padding-top: 8px;
   font: 12px sans-serif;
-  color: lightpink;
+  color: rgb(182, 255, 186);
   text-align: center;
   background: #551aaf;
   border: 0;
